New: Updated documentation