@@ -1,23 +1,25 @@
 sbt-vaadin-plugin
 =================
 
-Features
---------
+## Introduction
+
+sbt-vaadin-plugin is a plugin for [Simple Build Tool](http://code.google.com/p/simple-build-tool/) that generates widget sets for for [Vaadin](http://www.vaadin.com). If you intend to use any third party widgets not included in the core Vaadin distribution, you'll ned widget set compilation.
+
+## Features
 
 + Generates Vaadin widget sets
 + Works with jetty-run
 + Includes generated files properly into SBT-generated WAR-files
 + Fully configurable through method overrides
++ Uses `java` command from PATH, not necessarily the same JVM you are running SBT with!
 
-Usage
------
+## Usage
 
 **Make sure you have the required GWT dependencies included.**
 You'll need these (2.0.4 is just an example, feel free to use any version):
 
     val gwtDev = "com.google.gwt" % "gwt-dev" % "2.0.4"
     val gwtUser = "com.google.gwt" % "gwt-user" % "2.0.4" 
-    
 
 First, add the maven repository and the plugin declaration to project/plugins/Plugins.scala:
 
@@ -41,8 +43,8 @@ Add a corresponding module definition file into src/main/resources (in this exam
 
     <?xml version="1.0" encoding="UTF-8"?>
     <!DOCTYPE module PUBLIC
-      "-//Google Inc.//DTD Google Web Toolkit 1.7.0//EN"
-      "http://google-web-toolkit.googlecode.com/svn/tags/1.7.0/distro-source/core/src/gwt-module.dtd">
+      "-//Google Inc.//DTD Google Web Toolkit 2.0.4//EN"
+      "http://google-web-toolkit.googlecode.com/svn/tags/2.0.4/distro-source/core/src/gwt-module.dtd">
     <module>
     </module>
 
@@ -62,13 +64,30 @@ Add your widget set init parameter to web.xml:
 
 The plugin compiles the widget set automatically if it hasn't been compiled before, so you can now run the webapp with jetty-run or package it with package.
 
-Supported SBT actions
------------
+### How do I ...?
+
+#### Disable vaadin widget set compilation
+
+`override autorunVaadinCompile = false`
+
+#### Change GWT compiler arguments
+
+`override vaadinCompilerArgs = super.vaadinCompilerArgs ::: List("-draftCompile", "-localWorkers", "2")`
+
+#### Change GWT compiler JVM arguments
+
+If you want to replace default arguments:
+`override vaadinCompilerJvmArgs = List("-server", "-Xmx256M")`
+
+If you just want add some arguments in addition to the defaults:
+`override vaadinCompilerJvmArgs = super.vaadinCompilerJvmArgs ::: List("-server", "-XX:MaxPermSize:256m")`
+
+## Supported SBT actions
 
 *   vaadin-compile
 
-    > Compiles the Vaadin widgetset.
+    > Compiles a Vaadin widgetset.
 
-*   vaadin-clean
+## TODO
 
-    > Cleans all generated Vaadin-specific files.
+Nothing at the moment! _Please report any bugs you find_
